objects/Distribution_Alert__c.object
<CustomObject>
    <description>Distribution Alerts</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status_Description__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Email to follow with more details.</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distribution_Alert_Summary__c</fullName>
        <description>Report link to show the history on the distribution alerts.</description>
        <formula>HYPERLINK(&quot;/00Oj0000004JJuJ?pv0=&quot;&amp;Id,&quot;Distribution Alert Summary&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Alert Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>Impact is a dependent picklist based on the reason.</description>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status_Description__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Impact</fullName>
                    <default>true</default>
                    <label>Customer Impact</label>
                </value>
                <value>
                    <fullName>No customer impact.</fullName>
                </value>
                <value>
                    <fullName>Customers may experience spot service issues.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <description>Date and time last updated.</description>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mission_Statement__c</fullName>
        <description>Mission statement for Cooked Tubs</description>
        <formula>&quot;To identify a solutions-based plan to create a consistent supply of cooked tubs this season and long-term that regains customer confidence in our ability to service their cooked tub needs.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mission Statement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Status_Description__c</fullName>
        <description>The previous value of the Status Description field.</description>
        <label>Previous Status Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason for the Status</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weather</fullName>
                </value>
                <value>
                    <fullName>Ingredients</fullName>
                </value>
                <value>
                    <fullName>Trucks - No Order Pickup</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Product Availability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <description>The Status Description is Red, Yellow or Green</description>
        <label>Status Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of Cooked Tubs for the location.</description>
        <formula>IF(ISBLANK(text(Status_Description__c )),NULL,
IF(text(Status_Description__c)=&quot;Red&quot;, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 15),
IF(text(Status_Description__c)=&quot;Green&quot; ,IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, 15),
IF(text(Status_Description__c)=&quot;Yellow&quot;,IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 15, 15),NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_formula__c</fullName>
        <description>This field is used in the process builder which triggers an email alert.</description>
        <formula>text( Status_Description__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status (formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Distribution_Alert_ID__c</fullName>
        <description>SFDC 18 digit ID for Distribution Alerts</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Distribution Alert ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year is derived from the Last Updated field.</description>
        <formula>text(Year(DATEVALUE(Last_Updated__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Distribution Alert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Status_Description__c</columns>
        <columns>Impact__c</columns>
        <columns>Reason__c</columns>
        <columns>Last_Updated__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution Alerts</pluralLabel>
    <recordTypes>
        <fullName>Cooked_Tubs</fullName>
        <active>true</active>
        <description>Cattle Cooked Tubs</description>
        <label>Cooked Tubs</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cooked_Tubs_No_Reason_Green_Status</fullName>
        <active>true</active>
        <description>If the record type is Cooked Tubs and that Status description is Green, there should be no value selected for &quot;Reason&quot;.</description>
        <errorConditionFormula>And( 
RecordType.Name = &quot;Cooked Tubs&quot;, 
text( Status_Description__c ) = &quot;Green&quot;, 
Not(ISBLANK( text(Reason__c )) )
)</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>There should not be a &quot;Reason&quot; when the status is Green.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cooked_Tubs_Reason_For_Red_Status</fullName>
        <active>true</active>
        <description>If the Record Type is Cooked Tubs and the Status Description is Red, a Reason is required.</description>
        <errorConditionFormula>And(
RecordType.Name = &quot;Cooked Tubs&quot;,
text( Status_Description__c ) = &quot;Red&quot;, 
ISBLANK( text(Reason__c ))
)</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>This field is required.</errorMessage>
    </validationRules>
</CustomObject>